feat: add, edit, delete, submit
add, edit, delete done with redux-toolkit and basic frontend is done

--- a/Profiles Page/profiles/src/App.css
+++ b/Profiles Page/profiles/src/App.css
@@ -56,3 +56,25 @@
 .ProfileList {
   width: 65%
 }
+
+.information {
+  margin: 25px;
+}
+
+.image {
+  width: 600px;
+  height: 300px;
+  object-fit: cover;
+}
+
+.name{
+  font-weight: bold;
+}
+
+.buttons{
+  margin: 10px;
+}
+
+.Card{
+  border: 2px gray solid;
+}
